--- a/Dockerfile.ctrader
+++ b/Dockerfile.ctrader
@@ -4,7 +4,6 @@ WORKDIR /app
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONPATH=/app \
     OPTIMO_WORKER_ROOT=/data/worker_runs \
     CTRADE_CLI_PATH=ctrader-cli
 
@@ -15,9 +14,9 @@ RUN (apt-get update && apt-get install -y --no-install-recommends python3 python
 COPY requirements.txt /app/requirements.txt
 RUN python3 -m pip install --no-cache-dir -r /app/requirements.txt
 
-COPY worker /app/worker
+COPY main.py /app/main.py
+COPY __init__.py /app/__init__.py
 
 EXPOSE 1112
 
-CMD ["python3", "-m", "uvicorn", "worker.main:app", "--host", "0.0.0.0", "--port", "1112"]
-
+CMD ["python3", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "1112"]
