--- a/provision/linux/systemd/optimo-worker.service
+++ b/provision/linux/systemd/optimo-worker.service
@@ -7,13 +7,12 @@ Wants=network-online.target
 Type=simple
 User=optimo
 Group=optimo
-WorkingDirectory=/opt/optimo/BravoOPTIMO_UI/backend
+WorkingDirectory=/opt/workerC
 EnvironmentFile=/etc/optimo-worker.env
 ExecStartPre=/usr/local/bin/optimo-worker-update.sh
-ExecStart=/opt/optimo/BravoOPTIMO_UI/.venv/bin/uvicorn worker.main:app --host 0.0.0.0 --port 1112
+ExecStart=/opt/workerC/.venv/bin/uvicorn main:app --host 0.0.0.0 --port 1112
 Restart=always
 RestartSec=2
 
 [Install]
 WantedBy=multi-user.target
-
