--- a/provision/hetzner/optimo-worker-docker.env.example
+++ b/provision/hetzner/optimo-worker-docker.env.example
@@ -10,3 +10,8 @@ OPTIMO_WORKER_ROOT=/var/lib/optimo-worker/runs
 
 # Parallelism inside the worker
 OPTIMO_WORKER_PARALLEL=4
+
+# Optional: Telegram "online" notification (sent by worker on startup)
+# TELEGRAM_BOT_TOKEN=...
+# CHAT_ID=...   # or set CHAT_DANIEL
+# OPTIMO_WORKER_PUBLIC_URL=http://<PUBLIC_IP>:1112
