--- a/provision/hetzner/optimo-worker-docker.env.example
+++ b/provision/hetzner/optimo-worker-docker.env.example
@@ -10,6 +10,8 @@ OPTIMO_WORKER_ROOT=/var/lib/optimo-worker/runs
 
 # Parallelism inside the worker
 OPTIMO_WORKER_PARALLEL=4
+# If OPTIMO_WORKER_PARALLEL=auto or unset, default worker slots = cpu_cores * this value.
+OPTIMO_WORKER_PARALLEL_PER_CORE=2
 
 # Optional: Telegram "online" notification (sent by worker on startup)
 # TELEGRAM_BOT_TOKEN=...
