--- a/provision/linux/optimo-worker-docker.env.example
+++ b/provision/linux/optimo-worker-docker.env.example
@@ -14,3 +14,5 @@ OPTIMO_WORKER_ROOT=/var/lib/optimo-worker/runs
 
 # Parallelism inside the worker.
 OPTIMO_WORKER_PARALLEL=4
+# If OPTIMO_WORKER_PARALLEL=auto or unset, default worker slots = cpu_cores * this value.
+OPTIMO_WORKER_PARALLEL_PER_CORE=2
