--- a/provision/linux/optimo-worker.env.example
+++ b/provision/linux/optimo-worker.env.example
@@ -3,6 +3,8 @@ CTRADE_CLI_PATH=/path/to/ctrader_cli
 
 # How many parallel backtests to run in this worker.
 OPTIMO_WORKER_PARALLEL=4
+# If OPTIMO_WORKER_PARALLEL=auto or unset, default worker slots = cpu_cores * this value.
+OPTIMO_WORKER_PARALLEL_PER_CORE=2
 
 # Where the worker stores run workdirs (reports/logs/tmp).
 OPTIMO_WORKER_ROOT=/var/lib/optimo-worker/runs
