patch uniformita a genetica (pre modifica pool)

--- a/provision/hetzner/optimo-worker-docker.env.example
+++ b/provision/hetzner/optimo-worker-docker.env.example
@@ -10,8 +10,9 @@ OPTIMO_WORKER_ROOT=/var/lib/optimo-worker/runs
 
 # Parallelism inside the worker
 OPTIMO_WORKER_PARALLEL=4
-# If OPTIMO_WORKER_PARALLEL=auto or unset, default worker slots = cpu_cores * this value.
-OPTIMO_WORKER_PARALLEL_PER_CORE=2
+# If OPTIMO_WORKER_PARALLEL=auto or unset, default worker slots are
+# cTrader-like (floor(cpu_cores / 2) + 1), then multiplied by this value.
+OPTIMO_WORKER_PARALLEL_PER_CORE=1
 
 # Optional: Telegram "online" notification (sent by worker on startup)
 # TELEGRAM_BOT_TOKEN=...
