--- a/provision/linux/optimo-worker.env.example
+++ b/provision/linux/optimo-worker.env.example
@@ -3,8 +3,9 @@ CTRADE_CLI_PATH=/path/to/ctrader_cli
 
 # How many parallel backtests to run in this worker.
 OPTIMO_WORKER_PARALLEL=4
-# If OPTIMO_WORKER_PARALLEL=auto or unset, default worker slots = cpu_cores * this value.
-OPTIMO_WORKER_PARALLEL_PER_CORE=2
+# If OPTIMO_WORKER_PARALLEL=auto or unset, default worker slots are
+# cTrader-like (floor(cpu_cores / 2) + 1), then multiplied by this value.
+OPTIMO_WORKER_PARALLEL_PER_CORE=1
 
 # Where the worker stores run workdirs (reports/logs/tmp).
 OPTIMO_WORKER_ROOT=/var/lib/optimo-worker/runs
