--- a/provision/linux/optimo-worker-docker.env.example
+++ b/provision/linux/optimo-worker-docker.env.example
@@ -17,3 +17,9 @@ OPTIMO_WORKER_PARALLEL=4
 # If OPTIMO_WORKER_PARALLEL=auto or unset, default worker slots are
 # cTrader-like (floor(cpu_cores / 2) + 1), then multiplied by this value.
 OPTIMO_WORKER_PARALLEL_PER_CORE=1
+
+# Use patched persistent CLI session host (1=true, 0=false fallback subprocess per pass).
+OPTIMO_CUSTOM_CLI_PATCHED=1
+# Optional overrides when patched mode is enabled:
+# OPTIMO_CLI_PATCHED_HOST_PATH=/app/worker/cli_patched_host/Optimo.CliPatchedHost.dll
+# CTRADE_CLI_DIR=/app
