--- a/Dockerfile.ctrader
+++ b/Dockerfile.ctrader
@@ -1,11 +1,16 @@
-FROM ghcr.io/spotware/ctrader-console:latest
+ARG CTRADER_CONSOLE_BASE_IMAGE=ghcr.io/spotware/ctrader-console:latest
+FROM ${CTRADER_CONSOLE_BASE_IMAGE}
 
 WORKDIR /app
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     OPTIMO_WORKER_ROOT=/data/worker_runs \
-    CTRADE_CLI_PATH=ctrader-cli
+    CTRADE_CLI_PATH=ctrader-cli \
+    CTRADE_CLI_DIR=/app \
+    OPTIMO_CUSTOM_CLI_PATCHED=1 \
+    OPTIMO_CLI_PATCHED_DOTNET_PATH=dotnet \
+    OPTIMO_CLI_PATCHED_HOST_PATH=/app/worker/cli_patched_host/Optimo.CliPatchedHost.dll
 
 # Install Python runtime (base image distro may vary).
 RUN (apt-get update && apt-get install -y --no-install-recommends python3 python3-pip ca-certificates && rm -rf /var/lib/apt/lists/*) \
