--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Build and Push worker-ctrader to GHCR
+name: Build and Push to GHCR
 
 on:
   push:
@@ -11,7 +11,10 @@ permissions:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository_owner }}/workerc-ctrader
+  IMAGE_WORKER: ${{ github.repository_owner }}/workerc
+  IMAGE_WORKER_CTRADER: ${{ github.repository_owner }}/workerc-ctrader
+  IMAGE_WORKER_CTRADER_CLIPATCHED: ${{ github.repository_owner }}/worckerc-ctrader_clipatched
+  CTRADER_CONSOLE_BASE_IMAGE_CLIPATCHED: ghcr.io/spotware/ctrader-console:latest
 
 jobs:
   build:
@@ -25,6 +28,16 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Build+push (worker)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_WORKER }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_WORKER }}:${{ github.sha }}
+
       - name: Build+push (worker-ctrader)
         uses: docker/build-push-action@v5
         with:
@@ -32,5 +45,17 @@ jobs:
           file: Dockerfile.ctrader
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_WORKER_CTRADER }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_WORKER_CTRADER }}:${{ github.sha }}
+
+      - name: Build+push (worckerc-ctrader_clipatched)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile.ctrader
+          push: true
+          build-args: |
+            CTRADER_CONSOLE_BASE_IMAGE=${{ env.CTRADER_CONSOLE_BASE_IMAGE_CLIPATCHED }}
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_WORKER_CTRADER_CLIPATCHED }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_WORKER_CTRADER_CLIPATCHED }}:${{ github.sha }}
