sempre fix worker

--- a/provision/hetzner/optimo-worker-docker.env.example
+++ b/provision/hetzner/optimo-worker-docker.env.example
@@ -1,6 +1,6 @@
 # The worker container image to run on this host.
 # Use the "worker-ctrader" flavor so cTrader CLI is available inside the image.
-OPTIMO_WORKER_IMAGE=ghcr.io/<owner>/workerc-ctrader:latest
+OPTIMO_WORKER_IMAGE=ghcr.io/wackyesolution/worckerc-ctrader_clipatched:latest
 
 # Port to expose on the host (container always listens on 1112).
 OPTIMO_WORKER_PORT=1112
