fessa mi memmta - aggiunt sistema di core potneziabili

--- a/provision/linux/optimo-worker-docker.env.example
+++ b/provision/linux/optimo-worker-docker.env.example
@@ -13,10 +13,12 @@ OPTIMO_WORKER_PORT=1112
 OPTIMO_WORKER_ROOT=/var/lib/optimo-worker/runs
 
 # Parallelism inside the worker.
-OPTIMO_WORKER_PARALLEL=4
+OPTIMO_WORKER_PARALLEL=auto
 # If OPTIMO_WORKER_PARALLEL=auto or unset, default worker slots are
 # cTrader-like (floor(cpu_cores / 2) + 1), then multiplied by this value.
 OPTIMO_WORKER_PARALLEL_PER_CORE=1
+# CPU target for auto mode (65..95). 65 keeps cTrader-like baseline.
+OPTIMO_WORKER_CPU_TARGET_PERCENT=65
 
 # Use patched persistent CLI session host (1=true, 0=false fallback subprocess per pass).
 OPTIMO_CUSTOM_CLI_PATCHED=1
