--- a/provision/linux/optimo-worker.env.example
+++ b/provision/linux/optimo-worker.env.example
@@ -2,10 +2,12 @@
 CTRADE_CLI_PATH=/path/to/ctrader_cli
 
 # How many parallel backtests to run in this worker.
-OPTIMO_WORKER_PARALLEL=4
+OPTIMO_WORKER_PARALLEL=auto
 # If OPTIMO_WORKER_PARALLEL=auto or unset, default worker slots are
 # cTrader-like (floor(cpu_cores / 2) + 1), then multiplied by this value.
 OPTIMO_WORKER_PARALLEL_PER_CORE=1
+# CPU target for auto mode (65..95). 65 keeps cTrader-like baseline.
+OPTIMO_WORKER_CPU_TARGET_PERCENT=65
 
 # Where the worker stores run workdirs (reports/logs/tmp).
 OPTIMO_WORKER_ROOT=/var/lib/optimo-worker/runs
